# Limnoria

./: .editorconfig  .gitattributes  .gitignore  .mailmap  .travis.runonce.bash  .travis.yml  ACKS  BUGS  CHANGELOG  CONTRIBUTING.md  ChangeLog  DEVS  GO_AWAY_AND_USE_DARCS  INSTALL  INSTALL.md  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README  README.md  RELNOTES  TODO  __init__.py  config.py  messages.pot  plugin.py  push.sh  pyproject.toml  requirements.txt  setup.py  test.py
2to3/: fix_def_iteritems.py  fix_def_iterkeys.py  fix_def_itervalues.py  fix_import.py  fix_reload.py  run.py
Factoids/: config.py  plugin.py  test.py
debian/: changelog  control  control.py2  control.py3  copyright  docs  manpage_supybot-adduser.sgml  manpage_supybot-newplugin.sgml  manpage_supybot-wizard.sgml  manpage_supybot.sgml  rules  watch
docs/: ADVANCED_PLUGIN_CONFIG  ADVANCED_PLUGIN_CONFIG.rst  ADVANCED_PLUGIN_TESTING  ADVANCED_PLUGIN_TESTING.rst  CAPABILITIES  CAPABILITIES.rst  CONFIGURATION  CONFIGURATION.rst  EXAMPLE  FAQ  FAQ.rst  GETTING_STARTED  GETTING_STARTED.rst  HACKING  HINTS  INTERFACES  Makefile  OVERVIEW  PLUGIN-EXAMPLE  PLUGIN_TUTORIAL  PLUGIN_TUTORIAL.rst  RELEASE-CHECKLIST  STYLE  STYLE.rst  USING_UTILS  USING_UTILS.rst  USING_WRAP  USING_WRAP.rst  conf.py  index.rst
examples/: Random.py  channels.conf  users.conf
locale/: de.po  fi.po  fr.po  fr.py  it.po  messages.pot
locales/: de.po  fi.po  fr.po  it.po  messages.pot  plugins_AutoMode_AutoMode-es.po  plugins_Google_Google-es.po  ru.po
man/: limnoria-adduser.1  limnoria-botchk.1  limnoria-plugin-create.1  limnoria-plugin-doc.1  limnoria-reset-password.1  limnoria-test.1  limnoria-wizard.1  limnoria.1  supybot-adduser.1  supybot-botchk.1  supybot-plugin-create.1  supybot-plugin-doc.1  supybot-reset-password.1  supybot-test.1  supybot-wizard.1  supybot.1
others/: BeautifulSoup.py  SOAP.py  amazon.py  asynchat.py  asyncore.py  babelfish.py  cgitb.py  convertcore.py  dictclient.py  fpconst.py  google.py  poker.py  rfc822.py  rssparser.py  shlex.py  timeparse.py  unittest.py  urllib2.py
plugins/: Alias.py  Amazon.py  Anonymous.py  AutoMode.py  Babelfish.py  BadWords.py  Bayes.py  Bugzilla.py  ChannelDB.py  ChannelLogger.py  ChannelNews.py  ChannelRelay.py  ChannelStats.py  ChannelTopic.py  Ctcp.py  Currency.py  Cycler.py  DCC.py  Debian.py  Dict.py  Dictionary.py  Dunno.py  Ebay.py  Enforcer.py  FServe.py  Factoids.py  Filter.py  FixRelayBot.py  Format.py  Forums.py  FreeBSD.py  Freenode.py  Friendly.py  Fun.py  FunCommands.py  FunDB.py  Gameknot.py  Geekquote.py  Google.py  GoogleTools.py  (+74 more)
pyodide/: README.rst  index.html  limnoria.conf  serve.py
sandbox/: Debian.py  Debug  Debug.py  FIXING-BUGS  FreeBSD.py  Infobot.py  Markov.py  Project.py  RELEASE_CHECKLIST  TwistedCommands.py  anagrams.py  averagePrefix.py  check_trans.py  debian.py  friendly.py  generate-plugin-documentation.py  makescript.py  pycheckrc  pylintrc  rbot.py  release.py  run_2to3.sh  setuppy_to_projecttoml.py  supybot  twistedDrivers.py  update-version  update_plugins_messagespot.py  update_pot.py  update_readme.sh  usersXml.py  version-commit
scripts/: adduser.py  clean.py  dumpdb.py  limnoria  limnoria-adduser  limnoria-botchk  limnoria-plugin-create  limnoria-plugin-doc  limnoria-test  limnoria-wizard  makedb.py  newplugin.py  plugin-documentation.py  removeSpaces.py  script-upgrade.py  setup.py  supybot  supybot-adduser  supybot-adduser.py  supybot-botchk  supybot-newplugin  supybot-newplugin.py  supybot-plugin-create  supybot-plugin-doc  supybot-plugin-package  supybot-reset-password  supybot-test  supybot-wizard  supybot-wizard.py
src/: Admin.py  AdminCommands.py  Channel.py  ChannelCommands.py  Config.py  Misc.py  MiscCommands.py  Owner.py  OwnerCommands.py  User.py  UserCommands.py  __init__.py  _main.py  ansi.py  asyncoreDrivers.py  baseplugin.py  bot.py  callbacks.py  cdb.py  commands.py  conf.py  configurable.py  dbi.py  dcc.py  debug.py  drivers.py  dynamicScope.py  fix.py  gpg.py  httpserver.py  i18n.py  ircdb.py  irclib.py  (+26 more)
(+1231 files in other folders)
